--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color:#050a0e;margin:0;padding:0;">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -36,210 +36,8 @@
     <meta property="twitter:description" content="raze Tools Empowers You with Professional Tools for Maximum Market Impact" />
     <meta property="twitter:image" content="https://raze.bot/images/bannermeta.png" />
 
-    <!-- Initial loading animation styles (shown before React mounts) -->
-    <style id="initial-loader-styles">
-      body, html {
-        margin: 0;
-        padding: 0;
-        background-color: #050a0e;
-      }
-      
-      #initial-loader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #050a0e;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        z-index: 999;
-      }
-
-      #initial-loader .logo-container {
-        position: relative;
-        width: 160px;
-        height: 160px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 16px;
-        background-image:
-          linear-gradient(rgba(2, 179, 109, 0.1) 1px, transparent 1px),
-          linear-gradient(90deg, rgba(2, 179, 109, 0.1) 1px, transparent 1px);
-        background-size: 10px 10px;
-        border-radius: 50%;
-        box-shadow: 0 0 30px rgba(2, 179, 109, 0.2);
-      }
-
-      #initial-loader .corner {
-        position: absolute;
-        width: 16px;
-        height: 16px;
-        border-color: #02b36d;
-        border-style: solid;
-        border-width: 0;
-        opacity: 0.8;
-      }
-
-      #initial-loader .corner-tl { top: -4px; left: -4px; border-top-width: 2px; border-left-width: 2px; }
-      #initial-loader .corner-tr { top: -4px; right: -4px; border-top-width: 2px; border-right-width: 2px; }
-      #initial-loader .corner-bl { bottom: -4px; left: -4px; border-bottom-width: 2px; border-left-width: 2px; }
-      #initial-loader .corner-br { bottom: -4px; right: -4px; border-bottom-width: 2px; border-right-width: 2px; }
-
-      #initial-loader .logo-orbit {
-        position: absolute;
-        width: 160px;
-        height: 160px;
-        border-radius: 50%;
-        border: 1px dashed rgba(2, 179, 109, 0.3);
-        animation: orbitRotateInit 8s linear infinite;
-      }
-
-      @keyframes orbitRotateInit {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-      }
-
-      #initial-loader .orbit-dot {
-        position: absolute;
-        width: 6px;
-        height: 6px;
-        background-color: #02b36d;
-        border-radius: 50%;
-        box-shadow: 0 0 8px #02b36d;
-      }
-
-      #initial-loader .dot-1 { top: 0; left: 50%; transform: translateX(-50%); }
-      #initial-loader .dot-2 { top: 50%; right: 0; transform: translateY(-50%); }
-      #initial-loader .dot-3 { bottom: 0; left: 50%; transform: translateX(-50%); }
-      #initial-loader .dot-4 { top: 50%; left: 0; transform: translateY(-50%); }
-
-      #initial-loader .logo-hexagon {
-        width: 100px;
-        height: 100px;
-        background-color: #0a1419;
-        position: relative;
-        clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        box-shadow: 0 0 15px rgba(2, 179, 109, 0.4), inset 0 0 10px rgba(2, 179, 109, 0.2);
-        animation: logoSpinInit 3.5s ease-in-out infinite;
-        z-index: 5;
-      }
-
-      #initial-loader .logo-hexagon img {
-        width: 60%;
-        height: 60%;
-        object-fit: contain;
-        filter: drop-shadow(0 0 5px rgba(2, 179, 109, 0.6));
-      }
-
-      @keyframes logoSpinInit {
-        0% {
-          transform: rotate(0deg) scale(0.92);
-          box-shadow: 0 0 10px rgba(2, 179, 109, 0.3), inset 0 0 5px rgba(2, 179, 109, 0.15);
-        }
-        50% {
-          transform: rotate(180deg) scale(1);
-          box-shadow: 0 0 20px rgba(2, 179, 109, 0.6), inset 0 0 15px rgba(2, 179, 109, 0.4);
-        }
-        100% {
-          transform: rotate(360deg) scale(0.92);
-          box-shadow: 0 0 10px rgba(2, 179, 109, 0.3), inset 0 0 5px rgba(2, 179, 109, 0.15);
-        }
-      }
-
-      #initial-loader .loading-text {
-        color: #02b36d;
-        text-transform: uppercase;
-        letter-spacing: 3px;
-        margin-top: 20px;
-        position: relative;
-        font-size: 13px;
-        font-family: 'Courier New', monospace;
-        overflow: hidden;
-      }
-
-      #initial-loader .loading-text::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 100%;
-        width: 100%;
-        background: linear-gradient(90deg,
-          transparent 0%,
-          transparent 40%,
-          #02b36d 50%,
-          transparent 60%,
-          transparent 100%);
-        animation: loadingTextScanInit 2s linear infinite;
-        filter: blur(5px);
-        opacity: 0.6;
-      }
-
-      @keyframes loadingTextScanInit {
-        0% { transform: translateX(-100%); }
-        100% { transform: translateX(100%); }
-      }
-
-      #initial-loader .progress-container {
-        width: 200px;
-        height: 3px;
-        background: #091217;
-        position: relative;
-        margin-top: 16px;
-        border: 1px solid rgba(2, 179, 109, 0.2);
-        overflow: hidden;
-        border-radius: 2px;
-      }
-
-      #initial-loader .progress-bar {
-        height: 100%;
-        width: 0%;
-        background: linear-gradient(90deg,
-          rgba(2, 179, 109, 0.4) 0%,
-          #02b36d 50%,
-          rgba(2, 179, 109, 0.4) 100%);
-        position: absolute;
-        animation: progressLoadInit 2.5s ease-in-out infinite;
-        box-shadow: 0 0 8px #02b36d;
-      }
-
-      @keyframes progressLoadInit {
-        0% { width: 0%; left: 0; }
-        50% { width: 60%; left: 20%; }
-        100% { width: 0%; left: 100%; }
-      }
-    </style>
   </head>
-  <body style="background-color:#050a0e;margin:0;padding:0;">
-    <!-- Initial loader shown before React mounts -->
-    <div id="initial-loader" style="position:fixed;top:0;left:0;width:100%;height:100%;background-color:#050a0e;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:999;">
-      <div class="logo-container">
-        <div class="corner corner-tl"></div>
-        <div class="corner corner-tr"></div>
-        <div class="corner corner-bl"></div>
-        <div class="corner corner-br"></div>
-        <div class="logo-orbit">
-          <div class="orbit-dot dot-1"></div>
-          <div class="orbit-dot dot-2"></div>
-          <div class="orbit-dot dot-3"></div>
-          <div class="orbit-dot dot-4"></div>
-        </div>
-        <div class="logo-hexagon">
-          <img src="https://raze.bot/images/favicon/android-icon-192x192.png" alt="Logo" />
-        </div>
-      </div>
-      <div class="loading-text" style="color:#02b36d;text-transform:uppercase;letter-spacing:3px;margin-top:20px;font-size:13px;font-family:'Courier New',monospace;">Initializing</div>
-      <div class="progress-container">
-        <div class="progress-bar"></div>
-      </div>
-    </div>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
