--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="https://raze.bot/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#000000">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@1&display=swap" rel="stylesheet">
     <title>Bundler - raze.bot</title>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
