--- a/index.template.html
+++ b/index.template.html
@@ -21,6 +21,9 @@
     <meta name="msapplication-TileColor" content="{{TILE_COLOR}}">
     <meta name="msapplication-TileImage" content="{{FAVICON_BASE_URL}}/ms-icon-144x144.png">
     <meta name="theme-color" content="{{THEME_COLOR}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap" rel="stylesheet">
     <title>{{TITLE}}</title>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
