--- a/index.template.html
+++ b/index.template.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="raze.bot" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="apple-touch-icon" sizes="57x57" href="{{FAVICON_BASE_URL}}/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{FAVICON_BASE_URL}}/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="{{FAVICON_BASE_URL}}/apple-icon-72x72.png">
